# optimize-films-schedule

./: README.md  pyproject.toml
examples/: sample_day.json  sample_travel_times.json
src/film_schedule/: __init__.py  cli.py  generate_travel_times.py  optimizer.py
tests/: test_cli.py  test_generate_travel_times.py  test_optimizer.py
